--- a/bin/build
+++ b/bin/build
@@ -1,8 +1,6 @@
 #!/bin/bash
 
-docker run \
-   --rm \
-   -v $PWD:/workspace openapitools/openapi-generator-cli generate \
+docker run --rm -v $PWD:/workspace openapitools/openapi-generator-cli generate \
    -i https://raw.githubusercontent.com/r7kamura/imgur-openapi/v0.1.1/schema.oas.yml \
    -g rust \
    -o /workspace
