--- a/bin/build
+++ b/bin/build
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 docker run --rm -v $PWD:/workspace openapitools/openapi-generator-cli generate \
-   -i https://raw.githubusercontent.com/r7kamura/imgur-openapi/v0.1.1/schema.oas.yml \
+   -i https://raw.githubusercontent.com/r7kamura/imgur-openapi/v$(cat VERSION)/schema.oas.yml \
    -g rust \
    -o /workspace \
    --package-name imgur-openapi
