Set some flags on bin/build to improve debuggability

--- a/bin/build
+++ b/bin/build
@@ -1,4 +1,5 @@
 #!/bin/bash
+set -euvxo pipefail
 
 docker run --rm -v $PWD:/workspace openapitools/openapi-generator-cli generate \
    -i https://raw.githubusercontent.com/r7kamura/imgur-openapi/v$(cat VERSION)/schema.oas.yml \
