Change User-Agent to "imgur_openapi/${version}"

--- a/bin/build
+++ b/bin/build
@@ -1,8 +1,10 @@
 #!/bin/bash
 set -euvxo pipefail
 
+version=$(cat VERSION)
 docker run --rm -v $PWD:/workspace openapitools/openapi-generator-cli generate \
-   -i https://raw.githubusercontent.com/r7kamura/imgur-openapi/v$(cat VERSION)/schema.oas.yml \
+   -i "https://raw.githubusercontent.com/r7kamura/imgur-openapi/v${version}/schema.oas.yml" \
    -g rust \
    -o /workspace \
+   --http-user-agent "imgur_openapi/${version}" \
    --package-name imgur_openapi
