Update bin/build to use custom template

--- a/bin/build
+++ b/bin/build
@@ -6,5 +6,6 @@ docker run --rm -v $PWD:/workspace openapitools/openapi-generator-cli generate \
    -i "https://raw.githubusercontent.com/r7kamura/imgur-openapi/v${version}/schema.oas.yml" \
    -g rust \
    -o /workspace \
+   --template-dir /workspace/template \
    --http-user-agent "imgur_openapi/${version}" \
    --package-name imgur_openapi
