--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
 name = "imgur_openapi"
 version = "0.4.0"
-authors = ["OpenAPI Generator team and contributors"]
 edition = "2018"
+description = "Imgur API client library for Rust."
+license = "MIT"
 
 [dependencies]
 serde = "^1.0"
