--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.4.0"
 edition = "2018"
 description = "Imgur API client library for Rust."
 license = "MIT"
+include = ["src/**/*", "LICENSE.txt", "README.md"]
 
 [dependencies]
 serde = "^1.0"
