--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.4.0"
 edition = "2018"
 description = "Imgur API client library for Rust."
 license = "MIT"
+homepage = "https://github.com/r7kamura/imgur_openapi-rs"
+repository = "https://github.com/r7kamura/imgur_openapi-rs"
 include = ["src/**/*", "LICENSE.txt", "README.md"]
 
 [dependencies]
